--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                       <ul class="navbar-nav ml-auto nav-flex-icons">
                           <li class="nav-item">
-                              <a class="nav-link waves-effect waves-light">
+                              <a class="nav-link waves-effect waves-light" href="https://www.facebook.com/TheAnimalRehomingService/" >
                                   <i class="fa fa-facebook"></i>
                               </a>
                           </li>
