--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- /Main navigation -->
 
     <!-- Main container -->
-    <div class="container-fluid">
+    <div class="">
 
         <!-- Main layout -->
         <main>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
             </div>
-            <!-- /.streak -->
+          <!-- /.streak -->
 
           <!-- First Container -->
           <div class="container">
@@ -256,6 +256,110 @@
             <!-- /Section: services -->
           </div>
           <!-- /First Container -->
+
+
+          <!-- Second Container -->
+          <div class="container-fluid py-5" style="background-color: #f3f3f5;">
+          <!-- Section: Testimonials v.2 -->
+          <section class="container text-center mb-5">
+
+            <!-- Section heading -->
+            <h2 class="h2-responsive font-weight-bold my-5 red-text">WHAT CLIENTS SAY</h2>
+
+            <!-- Carousel Wrapper -->
+            <div id="carousel-example-1" class="carousel no-flex testimonial-carousel slide carousel-fade" data-ride="carousel" data-interval="false" style="visibility: visible; animation-name: fadeIn;">
+              <!--Slides-->
+              <div class="carousel-inner" role="listbox">
+                <!--First slide-->
+                <div class="carousel-item active">
+                  <div class="testimonial text-center">
+                    <!--Avatar-->
+                    <div class="avatar mb-4">
+                      <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
+                    </div>
+                    <!--Content-->
+                    <p>
+                      <i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum accusamus eveniet molestias voluptatum inventore laboriosam labore sit, aspernatur praesentium iste impedit quidem dolor veniam.
+                    </p>
+                    <div class="mt-1">
+                      <h5><strong>Anna Deynah</strong></h5>
+                      <p>Founder at ET Company</p>
+                    </div>
+                    <!--Review-->
+                    <div class="red-text">
+                      <i class="fa fa-star"> </i>
+                      <i class="fa fa-star"> </i>
+                      <i class="fa fa-star"> </i>
+                      <i class="fa fa-star"> </i>
+                      <i class="fa fa-star-half-full"> </i>
+                    </div>
+                  </div>
+                </div>
+                <!--/First slide-->
+                <!--Second slide-->
+                <div class="carousel-item">
+                  <div class="testimonial text-center">
+                    <!--Avatar-->
+                    <div class="avatar mb-4">
+                      <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" class="rounded-circle img-fluid" alt="Second sample avatar image">
+                    </div>
+                    <!--Content-->
+                    <p>
+                      <i class="fa fa-quote-left"></i> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore. </p>
+                    <h4 class="font-weight-bold">Maria Kate</h4>
+                    <h6 class="font-weight-bold my-3">Photographer at Studio LA</h6>
+                    <!--Review-->
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star red-text"> </i>
+                  </div>
+                </div>
+                <!--Second slide-->
+                <!--Third slide-->
+                <div class="carousel-item">
+                  <div class="testimonial">
+                    <!--Avatar-->
+                    <div class="avatar mb-4">
+                      <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle img-fluid" alt="Third sample avatar image">
+                    </div>
+                    <!--Content-->
+                    <p>
+                      <i class="fa fa-quote-left"></i> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+                    <h4 class="font-weight-bold">John Doe</h4>
+                    <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
+                    <!--Review-->
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star red-text"> </i>
+                    <i class="fa fa-star-o red-text"> </i>
+                  </div>
+                </div>
+                <!--Third slide-->
+              </div>
+              <!--Slides-->
+              <!--Controls-->
+              <div class="container">
+              <a class="carousel-item-prev left carousel-control" href="#carousel-example-1" role="button" data-slide="prev">
+                              <span class="icon-prev" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                          </a>
+              <a class="carousel-item-next right carousel-control" href="#carousel-example-1" role="button" data-slide="next">
+                              <span class="icon-next" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                          </a>
+              </div>
+              <!-- /Controls -->
+            </div>
+            <!-- /Carousel Wrapper -->
+
+          </section>
+          <!-- Section: Testimonials -->
+
+          </div>
+          <!-- Second Container -->
 
         </main>
         <!-- /Main layout -->
