--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <!-- Intro -->
       <div id="home" class="view jarallax" data-jarallax="{&quot;speed&quot;: 0.2}" data-jarallax-original-styles="background-repeat: no-repeat; background-size: cover; background-position: center center;">
 
-        <div class="mask rgba-stylish-slight">
+        <div class="mask rgba-black-light">
                 <div class="container h-100 d-flex justify-content-center align-items-center">
                     <div class="row smooth-scroll">
                         <div class="col-md-12 home-cover">
@@ -186,12 +186,12 @@
           <!-- ./First container -->
 
           <!-- streak -->
-            <div class="streak streak-photo streak-md" style="background-image:url('img/furry-dog.jpg')">
-                <div class="flex-center rgba-indigo-light mask">
-                    <div class="white-text smooth-scroll mx-4">
-                        <h2 class="h2-responsive mb-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">You can't buy LOVE ... But you can rescue it</h2>
+            <div class="streak streak-photo streak-md" style="background-image:url('img/blue-cat.jpg')">
+                <div class="flex-center rgba-black-light mask">
+                    <div class="white-text smooth-scroll mt-5">
+                        <h2 class="h1-responsive mt-5 wow fadeIn white-text" style="visibility: visible; animation-name: fadeIn;">You can't buy LOVE ... But you can rescue it</h2>
                         <div class="text-center">
-                            <a href="#contact" class="btn btn-outline-white wow fadeIn waves-effect waves-light" data-offset="100" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Contact us</a>
+                            <a href="#contact" class="btn btn-outline-white wow fadeIn waves-effect waves-light mt-5" data-offset="100" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Contact us</a>
                         </div>
                     </div>
                 </div>
