--- a/index.html
+++ b/index.html
@@ -97,75 +97,21 @@
       </nav>
       <!--/.Navbar-->
 
-      <!-- Intro -->
-      <!-- <div id="home" class="view jarallax" data-jarallax="{"speed": 0.2}" data-jarallax-original-styles="background-image: url('../img/cat.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-
-          <div class="mask rgba-black-light">
-
-              <div class="container h-100 d-flex justify-content-center align-items-center">
-                  <div class="row smooth-scroll">
-                      <div class="col-md-12 home-cover">
-                          <div class="white-text text-center">
-                              <h2 class="display-4 font-weight-bold text-uppercase amber-text mb-4 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">Fur Friends in Need</h2>
-                              <h4 class="mt-2 mb-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">The Animal Rehoming Service</h4>
-                              <p class="grey-text wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">- EST. 2000 -</p>
-                          </div>
-                       </div>
-                  </div>
-              </div>
-          </div>
-
-
-          <div id="jarallax-container-0">
-              <div style="background-image: url('../img/lonely-dog.jpg'); background-position: center center; background-size: cover; background-repeat: no-repeat; position: fixed; top: 0px; left: 0px; right: 0px; width: 1280px; height: 853.333px; overflow: hidden; pointer-events: none; margin-top: 30px; visibility: visible; transform: translateY(0px) translateZ(0px);">
-
-              </div>
-          </div>
-
-      </div> -->
-      <!-- /.Intro -->
-
-      <!-- Intro Section -->
-      <!-- <div id="home" class="view jarallax" data-jarallax="{"speed": 0.2}" style="background-image: none; background-repeat: no-repeat; background-size: auto; background-position: center center; z-index: 0; background-attachment: scroll;" data-jarallax-original-styles="background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/Work/full%20page/img%20%282%29.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-            <div class="mask rgba-black-strong">
-                <div class="container h-100 d-flex justify-content-center align-items-center">
-                    <div class="row smooth-scroll">
-                        <div class="col-md-12">
-                            <div class="white-text text-center">
-                                <h2 class="display-4 font-weight-bold text-uppercase yellow-text mb-4 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">Legal services</h2>
-                                <h4 class="mt-2 mb-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Professional legal services</h4>
-                                <p class="grey-text wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">- EST. 1995 -</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <div id="jarallax-container-0" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -100;"><div style="background-position: 50% 50%; background-size: 100%; background-repeat: no-repeat; background-image: url('img/lonely-dog.jpg'); position: fixed; top: 0px; left: 0px; width: 5120px; height: 3413.33px; overflow: hidden; pointer-events: none; margin-left: 0px; margin-top: 77px; visibility: visible; transform: translateY(0px) translateZ(0px);"></div></div></div> -->
-      <!-- /Intro Section -->
-
       <!-- Intro sample -->
-
-<!--Main Navigation-->
-<header>
-
-    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('img/lonely-dog.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-        <div class="mask rgba-black-light">
-            <div class="container flex-center text-center">
-              <div class="row mt-5">
-                <div class="col-md-12 wow fadeIn mb-3" style="padding-top: 300px;">
-                  <h1 class="display-3 mb-2 wow fadeInDown amber-text font-weight-bold" data-wow-delay="0.3s">Fur Friends in Need</h1>
-                  <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn white-text" data-wow-delay="0.4s">THE ANIMAL REHOMING SERVICE</h5>
-                  <a class="btn btn-warning btn-lg wow fadeIn" data-wow-delay="0.4s">About us</a>
+      <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('img/lonely-dog.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+          <div class="mask rgba-black-light">
+              <div class="container flex-center text-center">
+                <div class="row mt-5">
+                  <div class="col-md-12 wow fadeIn mb-3" style="padding-top: 300px;">
+                    <h1 class="display-3 mb-2 wow fadeInDown amber-text font-weight-bold" data-wow-delay="0.3s">Fur Friends in Need</h1>
+                    <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn white-text" data-wow-delay="0.4s">THE ANIMAL REHOMING SERVICE</h5>
+                    <a class="btn btn-warning btn-lg wow fadeIn" data-wow-delay="0.4s">About us</a>
+                  </div>
                 </div>
               </div>
-            </div>
-        </div>
+          </div>
       </div>
-
-</header>
-<!--Main Navigation-->
-
-      <!-- /Intro sample -->
+<!-- /Intro sample -->
 
     </header>
     <!-- /Navigation & Intro -->
@@ -318,7 +264,7 @@
                 <section id="testimonials" class="section mb-5">
 
                   <!-- Section heading -->
-                  <h2 class="h2-responsive font-weight-bold my-5 red-text">WHAT CLIENTS SAY</h2>
+                  <h2 class="h2-responsive font-weight-bold my-5 red-text text-center">WHAT CLIENTS SAY</h2>
 
                   <!-- Carousel Wrapper -->
                   <div id="carousel-example-1" class="carousel no-flex testimonial-carousel slide carousel-fade" data-ride="carousel" data-interval="false" style="visibility: visible; animation-name: fadeIn;">
