adding google map to contact

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Google Maps -->
-    <script src="https://maps.google.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
     <script>
         // initialize scrollspy
         $('body').scrollspy({
