changing location on map

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                               </a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link waves-effect waves-light">
+                              <a class="nav-link waves-effect waves-light" href="https://twitter.com/animalrehomers">
                                   <i class="fa fa-twitter"></i>
                               </a>
                           </li>
@@ -622,8 +622,8 @@
                       <ul class="list-unstyled">
                         <li><p><i class="fa fa-home mr-3"></i> Melbourne, VIC 3000, AUS</p></li>
                         <li><p><i class="fa fa-envelope mr-3"></i> info@example.com</p></li>
-                        <li><p><i class="fa fa-phone mr-3"></i> + 01 234 567 88</p></li>
-                        <li><p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p></li>
+                        <li><p><i class="fa fa-phone mr-3"></i> 0409 213 131</p></li>
+                        <li><p><i class="fa fa-print mr-3"></i> 01 234 567 89</p></li>
                       </ul>
 
                     </div>
@@ -698,18 +698,18 @@
 
         function init_map() {
 
-            var var_location = new google.maps.LatLng(40.725118, -73.997699);
+            var var_location = new google.maps.LatLng(-37.879627, 145.020164);
 
             var var_mapoptions = {
                 center: var_location,
 
-                zoom: 14
+                zoom: 10
             };
 
             var var_marker = new google.maps.Marker({
                 position: var_location,
                 map: var_map,
-                title: "New York"
+                title: "The Animal Rehoming Service"
             });
 
             var var_map = new google.maps.Map(document.getElementById("map-container"),
