--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Google Maps -->
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCT3slKCs3X2aKg-KBEk4A63RPFcOxOdj0"></script>
     <script>
         // initialize scrollspy
         $('body').scrollspy({
@@ -703,7 +703,7 @@
             var var_mapoptions = {
                 center: var_location,
 
-                zoom: 10
+                zoom: 11
             };
 
             var var_marker = new google.maps.Marker({
