--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                               <!--First row-->
                               <div class="row mb-4">
                                   <div class="col-2">
-                                      <i class="fa fa-bank fa-2x mb-1 red-text" aria-hidden="true"></i>
+                                      <i class="fa fa-heart fa-2x mb-1 red-text" aria-hidden="true"></i>
                                   </div>
                                   <div class="col-10 mb-2">
                                        <h5 class="feature-title font-weight-bold mb-2">| Fostering a Pet</h5>
