--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
               </div>
           </div>
       </div>
-<!-- /Intro sample -->
-
+      <!-- /Intro sample -->
     </header>
     <!-- /Navigation & Intro -->
 
@@ -120,8 +119,7 @@
     <div class="">
       <!-- Main layout -->
       <main>
-
-            <!-- First container -->
+            <!-- 1st container -->
             <div class="container">
 
               <!-- Section: About us -->
@@ -168,7 +166,7 @@
               </section>
               <!-- /.Section: About us -->
             </div>
-            <!-- /.First container -->
+            <!-- /1st container -->
 
             <!-- streak -->
             <div class="streak streak-photo streak-md" style="background-image:url('img/blue-cat.jpg')">
@@ -183,15 +181,12 @@
             </div>
             <!-- /.streak -->
 
-            <!-- First Container -->
+            <!-- 2nd Container -->
             <div class="container">
-
               <!-- Section: Services -->
               <section id="services" class="section my-5 pb-4">
-
                       <!--Secion heading-->
                       <h2 class="red-text text-center text-uppercase font-weight-bold mt-4 mb-5 pt-5 pb-4 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Our services</h2>
-
                       <div class="row features-small wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.4s;">
 
                           <!--First column-->
@@ -250,14 +245,12 @@
 
                       </div>
                       <!--/First row-->
-
               </section>
               <!-- /Section: Services -->
             </div>
-            <!-- /First Container -->
+            <!-- /2nd Container -->
 
-
-            <!-- Third Container -->
+            <!-- 3nd Container -->
             <div class="container-fluid" style="background-color: #f3f3f5;">
               <div class="container py-5">
                 <!-- Section: Testimonials v.2 -->
@@ -357,24 +350,18 @@
                 <!-- Section: Testimonials -->
               </div>
             </div>
-            <!-- /Third Container -->
+            <!-- /3nd Container -->
 
-
-            <!-- Second Container -->
+            <!-- 4th Container -->
             <div class="container">
-
               <!-- Third section -->
               <section id="team" class="section team-section mb-5">
-
                   <!-- Section title -->
                   <h2 class="red-text text-center text-uppercase font-weight-bold my-5 pt-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Our Team</h2>
-
                   <!-- Section description -->
                   <p class="text-center w-responsive mx-auto my-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia iste provident, voluptatum voluptatibus aut modi aspernatur autem impedit, eius, debitis earum voluptatem. Quaerat hic aspernatur laborum magni earum.</p>
-
                   <!-- First row -->
                   <div class="row text-center">
-
                       <!--First column-->
                       <div class="col-lg-3 col-md-6 mb-5">
                           <div class="avatar">
@@ -389,7 +376,6 @@
                           <a type="button" class="btn-floating btn-primary waves-effect waves-light"><i class="fa fa-pinterest"></i></a>
                           <!--Instagram-->
                           <a type="button" class="btn-floating btn-primary waves-effect waves-light"><i class="fa fa-instagram"></i></a>
-
                       </div>
                       <!--/First column-->
 
@@ -407,7 +393,6 @@
                           <a type="button" class="btn-floating btn-fb btn-secondary waves-effect waves-light"><i class="fa fa-facebook"></i></a>
                           <!--GitHub-->
                           <a type="button" class="btn-floating btn-git btn-secondary waves-effect waves-light"><i class="fa fa-github"></i></a>
-
                       </div>
                       <!--/Second column-->
 
@@ -425,11 +410,10 @@
                           <a type="button" class="btn-floating btn-tw btn-primary waves-effect waves-light"><i class="fa fa-twitter"></i></a>
                           <!--Dribbble-->
                           <a type="button" class="btn-floating btn-dribbble btn-primary waves-effect waves-light"><i class="fa fa-dribbble"></i></a>
-
                       </div>
                       <!--/Third column-->
 
-                      <!--Third column-->
+                      <!--Fourth column-->
                       <div class="col-lg-3 col-md-6 mb-5">
                           <div class="avatar">
                               <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-11.jpg" class="z-depth-1">
@@ -443,38 +427,30 @@
                           <a type="button" class="btn-floating btn-tw btn-secondary waves-effect waves-light"><i class="fa fa-twitter"></i></a>
                           <!--Dribbble-->
                           <a type="button" class="btn-floating btn-dribbble btn-secondary waves-effect waves-light"><i class="fa fa-dribbble"></i></a>
-
                       </div>
-                      <!--/Third column-->
+                      <!--/Fourth column-->
                   </div>
-
               </section>
               <!-- /.Third section -->
-
               <hr class="between-sections">
-
 
               <!--Section: Contact-->
               <section id="contact" class="section pb-5 mb-5">
-
                   <!--Section heading-->
                   <h2 class="red-text text-center text-uppercase font-weight-bold my-5 pt-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Contact</h2>
                   <!--Section sescription-->
                   <p class="text-center w-responsive mx-auto mb-5 pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
 
                   <div class="row">
-
                       <!--First column-->
                       <div class="col-lg-5 mb-2">
-
                           <!--Form with header-->
                           <div class="card">
-
                               <div class="card-body">
                                   <!--Header-->
                                   <div class="form-header dark-color">
                                       <h3><i class="fa fa-envelope"></i> Write to us:</h3>
-                                  </div>
+                                  </div>  
 
                                   <p>To contact us, simply fill in the contact form below.</p>
                                   <br>
@@ -512,17 +488,15 @@
 
                           </div>
                           <!--/Form with header-->
-
                       </div>
                       <!--/First column-->
 
                       <!--Second column-->
                       <div class="col-lg-7">
-
                           <!--Google map-->
                           <div id="map-container" class="rounded z-depth-1-half map-container" style="height: 400px"></div>
-
                           <br>
+
                           <!--Buttons-->
                           <div class="row text-center mt-1">
                               <div class="col-md-4">
@@ -543,19 +517,15 @@
                                   <p>sale@gmail.com</p>
                               </div>
                           </div>
-
                       </div>
                       <!--/Second column-->
-
                   </div>
-
               </section>
               <!--/Section: Contact-->
-
             </div>
-            <!-- /Second Container -->
+            <!-- /4th Container -->
 
-            <!-- Third Container -->
+            <!-- 5th Container -->
             <div class="container-fluid" style="background-color: #E01A24;">
               <div class="row py-3">
                   <div class="col-md-12 mt-4 mb-4 text-center d-lg-flex justify-content-center">
@@ -567,9 +537,7 @@
                   </div>
               </div>
             </div>
-            <!-- /Third Container -->
-
-
+            <!-- /5th Container -->
       </main>
       <!-- /Main layout -->
 
@@ -660,10 +628,8 @@
                   <a href="http://www.tars.org.au/"> The Animal Rehoming Service</a>
                 </div>
                 <!-- Copyright -->
-
       </footer>
       <!-- Footer -->
-
     </div>
     <!-- Main Container -->
 
@@ -676,6 +642,7 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
+
     <!-- Google Maps -->
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyC29CqxN4phxb2Ds6GJZ91k8Zu4THIpfYA"></script>
     <script>
@@ -721,6 +688,7 @@
 
         google.maps.event.addDomListener(window, 'load', init_map);
     </script>
+
     <div class="hiddendiv common"></div>
     <span id="buffer-extension-hover-button" style="display: none; position: absolute; z-index: 8675309; width: 100px; height: 25px; background-image: url(&quot;chrome-extension://noojglkidnpfjbincgijbaiedldjfbhh/data/shared/img/buffer-hover-icon@2x.png&quot;); background-size: 100px 25px; opacity: 0.9; cursor: pointer;"></span>
 </body>
