editing the home page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 </head>
 
 <body class="tars">
-
-
     <!-- Navigation & Intro -->
     <header>
       <!--Navbar-->
@@ -36,7 +34,6 @@
 
             <!-- Collapsible content -->
             <div class="collapse navbar-collapse" id="basicExampleNav">
-
                 <!-- Links -->
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
@@ -67,9 +64,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
-
-
-
                 </ul>
                 <!-- Links -->
 
@@ -82,11 +76,6 @@
                           <li class="nav-item">
                               <a class="nav-link waves-effect waves-light" href="https://twitter.com/animalrehomers">
                                   <i class="fa fa-twitter"></i>
-                              </a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link waves-effect waves-light">
-                                  <i class="fa fa-instagram"></i>
                               </a>
                           </li>
                       </ul>
@@ -119,12 +108,10 @@
     <div class="">
       <!-- Main layout -->
       <main>
-            <!-- 1st container -->
+            <!-- 1st container: about us -->
             <div class="container">
-
               <!-- Section: About us -->
               <section id="about" class="section pt-3 pb-5 mb-5">
-
                       <!--Secion heading-->
                       <h2 class="red-text text-center text-uppercase font-weight-bold mt-4 mb-5 py-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">About us</h2>
 
@@ -162,11 +149,10 @@
 
                       </div>
                       <!-- /.First row -->
-
               </section>
               <!-- /.Section: About us -->
             </div>
-            <!-- /1st container -->
+            <!-- /1st container: about us -->
 
             <!-- streak -->
             <div class="streak streak-photo streak-md" style="background-image:url('img/blue-cat.jpg')">
@@ -181,7 +167,7 @@
             </div>
             <!-- /.streak -->
 
-            <!-- 2nd Container -->
+            <!-- 2nd Container: our services -->
             <div class="container">
               <!-- Section: Services -->
               <section id="services" class="section my-5 pb-4">
@@ -199,7 +185,7 @@
                                   </div>
                                   <div class="col-10 mb-2">
                                       <h5 class="feature-title font-weight-bold mb-2">| Adopting a Pet</h5>
-                                      <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                                      <p class="grey-text">The Animal Rehoming Service Inc. (TARS) finds homes for all kinds of animals, from dogs, cats, rabbits, guinea pigs, mice and rats through to horses, donkeys and farm animals.</p>
                                   </div>
                               </div>
                               <!--/First row-->
@@ -217,7 +203,7 @@
                                   </div>
                                   <div class="col-10 mb-2">
                                       <h5 class="feature-title font-weight-bold mb-2">| Rehoming Your Pet</h5>
-                                      <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                                      <p class="grey-text">The Animal Rehoming Service (TARS) finds homes for all types of animals. If for whatever reason you’re no longer able to keep your pet or pets, we can help you find a home for them</p> 
                                   </div>
                               </div>
                               <!--/First row-->
@@ -235,7 +221,8 @@
                                   </div>
                                   <div class="col-10 mb-2">
                                        <h5 class="feature-title font-weight-bold mb-2">| Fostering a Pet</h5>
-                                      <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti hic.</p>
+                                      <p class="grey-text">Foster people are needed by TARS to look after animals. If you are interest in fostering, you come to the right place.</p>
+                                      <p class="grey-text">To date, over 1000 animals have been rehomed through The Animal Rehoming Service Inc. (TARS), many of whom have come through our foster program.</p>
                                   </div>
                               </div>
                               <!--/First row-->
@@ -248,9 +235,9 @@
               </section>
               <!-- /Section: Services -->
             </div>
-            <!-- /2nd Container -->
+            <!-- /2nd Container: our services -->
 
-            <!-- 3nd Container -->
+            <!-- 3nd Container: testimonial -->
             <div class="container-fluid" style="background-color: #f3f3f5;">
               <div class="container py-5">
                 <!-- Section: Testimonials v.2 -->
@@ -350,16 +337,16 @@
                 <!-- Section: Testimonials -->
               </div>
             </div>
-            <!-- /3nd Container -->
+            <!-- /3nd Container: testimonial -->
 
-            <!-- 4th Container -->
+            <!-- 4th Container: team & contact-->
             <div class="container">
-              <!-- Third section -->
+              <!-- team section -->
               <section id="team" class="section team-section mb-5">
                   <!-- Section title -->
                   <h2 class="red-text text-center text-uppercase font-weight-bold my-5 pt-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Our Team</h2>
                   <!-- Section description -->
-                  <p class="text-center w-responsive mx-auto my-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia iste provident, voluptatum voluptatibus aut modi aspernatur autem impedit, eius, debitis earum voluptatem. Quaerat hic aspernatur laborum magni earum.</p>
+                  <!-- <p class="text-center w-responsive mx-auto my-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia iste provident, voluptatum voluptatibus aut modi aspernatur autem impedit, eius, debitis earum voluptatem. Quaerat hic aspernatur laborum magni earum.</p> -->
                   <!-- First row -->
                   <div class="row text-center">
                       <!--First column-->
@@ -384,8 +371,8 @@
                           <div class="avatar">
                               <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(12).jpg" class="z-depth-1">
                           </div>
-                          <h4 class="font-weight-bold my-4">Sarah Melyah</h4>
-                          <p class="grey-text">OFFICE ADMIN</p>
+                          <h4 class="font-weight-bold my-4">Andrena Matthews</h4>
+                          <p class="grey-text">SECRETARY</p>
 
                           <!--Google +-->
                           <a type="button" class="btn-floating btn-gplus btn-secondary waves-effect waves-light"><i class="fa fa-google-plus"></i></a>
@@ -401,7 +388,7 @@
                           <div class="avatar">
                               <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="z-depth-1">
                           </div>
-                          <h4 class="font-weight-bold my-4">John Doe</h4>
+                          <h4 class="font-weight-bold my-4">Felicity Stoward</h4>
                           <p class="grey-text">TREASURER</p>
 
                           <!--Linkedin-->
@@ -418,7 +405,7 @@
                           <div class="avatar">
                               <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-11.jpg" class="z-depth-1">
                           </div>
-                          <h4 class="font-weight-bold my-4">Anna Smith</h4>
+                          <h4 class="font-weight-bold my-4">Sue Foley</h4>
                           <p class="grey-text">MARKETING/PR</p>
 
                           <!--Linkedin-->
@@ -431,7 +418,7 @@
                       <!--/Fourth column-->
                   </div>
               </section>
-              <!-- /.Third section -->
+              <!-- /team section -->
               <hr class="between-sections">
 
               <!--Section: Contact-->
@@ -439,7 +426,9 @@
                   <!--Section heading-->
                   <h2 class="red-text text-center text-uppercase font-weight-bold my-5 pt-5 wow fadeIn" data-wow-delay="0.2s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Contact</h2>
                   <!--Section sescription-->
-                  <p class="text-center w-responsive mx-auto mb-5 pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
+                  <!-- <p class="text-center w-responsive mx-auto mb-5 pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p> -->
+                  <br>
+                  <br>
 
                   <div class="row">
                       <!--First column-->
@@ -501,20 +490,17 @@
                           <div class="row text-center mt-1">
                               <div class="col-md-4">
                                   <a class=" mb-2 btn-floating btn-secondary waves-effect waves-light"><i class="fa fa-map-marker"></i></a>
-                                  <p>Melbourne, VIC 3000</p>
-                                  <p>Australia</p>
+                                  <p>Melbourne, Australia</p>
                               </div>
 
                               <div class="col-md-4">
                                   <a class="mb-2 btn-floating btn-secondary waves-effect waves-light"><i class="fa fa-phone"></i></a>
-                                  <p>+ 61 234 567 89</p>
-                                  <p>Mon - Fri, 8:00-22:00</p>
+                                  <p>+ 0409 213 131</p>
                               </div>
 
                               <div class="col-md-4">
                                   <a class="mb-2 btn-floating btn-secondary waves-effect waves-light"><i class="fa fa-envelope"></i></a>
-                                  <p>info@gmail.com</p>
-                                  <p>sale@gmail.com</p>
+                                  <p>info@tars.org.au</p>
                               </div>
                           </div>
                       </div>
@@ -523,9 +509,9 @@
               </section>
               <!--/Section: Contact-->
             </div>
-            <!-- /4th Container -->
+            <!-- /4th Container: team & contact -->
 
-            <!-- 5th Container -->
+            <!-- 5th Container: subscribe bar -->
             <div class="container-fluid" style="background-color: #E01A24;">
               <div class="row py-3">
                   <div class="col-md-12 mt-4 mb-4 text-center d-lg-flex justify-content-center">
@@ -537,7 +523,7 @@
                   </div>
               </div>
             </div>
-            <!-- /5th Container -->
+            <!-- /5th Container: subscribe bar -->
       </main>
       <!-- /Main layout -->
 
@@ -555,8 +541,7 @@
 
                       <!-- Content -->
                       <h5 class="font-weight-bold text-uppercase mb-4">Fur Friends in Need</h5>
-                      <p>Here you can use rows and columns here to organize your footer content.</p>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum.</p>
+                      <p>The Animal Rehoming Service Inc. (TARS) is a Melbourne based registered charity which has found loving, permanent homes for over 1000 animals of every description, since it was established in 2000</p>
 
                     </div>
                     <!-- Grid column -->
@@ -570,10 +555,10 @@
                       <h5 class="font-weight-bold text-uppercase mb-4">TARS</h5>
 
                       <ul class="list-unstyled">
-                        <li><p><a href="#!">SERVICES</a></p></li>
                         <li><p><a href="#!">ABOUT US</a></p></li>
-                        <li><p><a href="#!">BLOG</a></p></li>
-                        <li><p><a href="#!">AWARDS</a></p></li>
+                        <li><p><a href="#!">SERVICES</a></p></li>
+                        <li><p><a href="#!">TESTIMONIALS</a></p></li>
+                        <li><p><a href="#!">DONATION</a></p></li>
                       </ul>
 
                     </div>
@@ -585,13 +570,12 @@
                     <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
 
                       <!-- Contact details -->
-                      <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+                      <h5 class="font-weight-bold text-uppercase mb-4">Contact</h5>
 
                       <ul class="list-unstyled">
                         <li><p><i class="fa fa-home mr-3"></i> Melbourne, VIC 3000, AUS</p></li>
-                        <li><p><i class="fa fa-envelope mr-3"></i> info@example.com</p></li>
+                        <li><p><i class="fa fa-envelope mr-3"></i> info@tars.org.au</p></li>
                         <li><p><i class="fa fa-phone mr-3"></i> 0409 213 131</p></li>
-                        <li><p><i class="fa fa-print mr-3"></i> 01 234 567 89</p></li>
                       </ul>
 
                     </div>
@@ -609,11 +593,6 @@
                       <a type="button" class="btn-floating btn-fb waves-effect waves-light"><i class="fa fa-facebook"></i></a>
                       <!-- Twitter -->
                       <a type="button" class="btn-floating btn-tw waves-effect waves-light"><i class="fa fa-twitter"></i></a>
-                      <!-- Google +-->
-                      <a type="button" class="btn-floating btn-gplus waves-effect waves-light"><i class="fa fa-google-plus"></i></a>
-                      <!-- Dribbble -->
-                      <a type="button" class="btn-floating btn-dribbble waves-effect waves-light"><i class="fa fa-dribbble"></i></a>
-
                     </div>
                     <!-- Grid column -->
 
